--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,11 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
+- task: oc-cmd@2
+  inputs:
+    openshiftService: 'ConnOpenShiftHome'
+    version: '4.3'
+    cmd: 'oc start-build nodejs-demoapp --follow'
 - task: NodeTool@0
   inputs:
     versionSpec: '10.x'
