--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,13 +15,9 @@ steps:
     openshiftService: 'ConnOpenShiftHome'
     version: '4.3'
     cmd: 'oc start-build nodejs-demoapp --follow'
-- task: NodeTool@0
+- task: oc-cmd@2
   inputs:
-    versionSpec: '10.x'
-  displayName: 'Install Node.js'
+    openshiftService: 'ConnOpenShiftHome'
+    version: '4.3'
+    cmd: 'oc status'
 
-- script: |
-    npm init
-    npm install
-    npm run build
-  displayName: 'npm install and build'
