--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,10 +14,10 @@ steps:
   inputs:
     openshiftService: 'ConnOpenShiftHome'
     version: '4.3'
-    cmd: 'oc start-build nodejs-demoapp --follow'
+    cmd: 'oc start-build nodejs-demoapp --follow --insecure-skip-tls-verify'
 - task: oc-cmd@2
   inputs:
     openshiftService: 'ConnOpenShiftHome'
     version: '4.3'
-    cmd: 'oc status'
+    cmd: 'oc status --insecure-skip-tls-verify'
 
