Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,4 +15,5 @@ steps:
     openshiftService: 'ConnOpenShiftHome'
     version: '4.3'
     cmd: 'oc login -u kubeadmin -p kKdPx-pjmWe-b3kuu-jeZm3 https://onepoc.net:6443 --insecure-skip-tls-verify=true'
+    uselocalOc: true
 
